fix: navbar on small screen width

--- a/styles/smallNav.css
+++ b/styles/smallNav.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: .3rem;
 
     img {
         width: 10%;
@@ -9,7 +10,7 @@
 
     p {
         color: var(--primary-color);
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: 900;
     }
 
